fixed gap issue and added divs

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,41 @@
-@font-face {
-    font-family: 'Roboto';
-    src: url('fonts/MyFont.woff2') format('woff2'),
-        url('fonts/MyFont.woff') format('woff'),
-        url('fonts/Roboto-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-
 body {
-    font-family: 'roboto', sans-serif;
+    font-family: sans-serif;
+    box-sizing: border-box;
+}
+
+.header {
+    background-color: #1F2937;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+}
+.left-side {
+    font-weight: 900;
+    font-size: 24px;
+    margin-left: 150px;
+}
+
+.right-side {
+    margin-right: 150px;
+}
+
+a {
+    text-decoration: none;
+    color: #B8BCC2;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
+    padding: 0;
+    margin: 0;
 }
